--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -26,13 +26,19 @@ jobs:
           cat > Dockerfile <<EOF
           FROM i386/debian:stretch-slim
 
+          # Replace stretch repo URLs with archive URLs for EOL release
+          RUN sed -i 's/deb.debian.org/archive.debian.org/g' /etc/apt/sources.list && \
+              sed -i '/security.debian.org/d' /etc/apt/sources.list && \
+              echo 'Acquire::Check-Valid-Until "false";' > /etc/apt/apt.conf.d/99no-check-valid-until
+
           RUN apt-get update && apt-get install -y wget curl git openjdk-8-jdk maven bash \
               && rm -rf /var/lib/apt/lists/*
 
           ENV JAVA_HOME=/usr/lib/jvm/java-8-openjdk-i386
-          ENV PATH=\$JAVA_HOME/bin:\$PATH
+          ENV PATH=$JAVA_HOME/bin:$PATH
 
           CMD ["bash"]
+
           EOF
 
           docker build --platform linux/386 -t custom-maven-jdk8-i386:latest .
